# ChangeLog for media-sound/exaile
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/exaile/ChangeLog,v 1.76 2011/03/28 13:23:18 ssuominen Exp $

*exaile-0.3.2.1 (28 Mar 2011)

  28 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> +exaile-0.3.2.1.ebuild:
  Version bump wrt #357699 by Rafael.

  14 Jan 2011; Brent Baude <ranger@gentoo.org> exaile-0.3.2.0.ebuild:
  stable ppc, bug 343163

  04 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
  exaile-0.3.2.0.ebuild:
  stable x86, bug 343163

  31 Oct 2010; Markos Chandras <hwoarang@gentoo.org> exaile-0.3.2.0.ebuild:
  Stable on amd64 wrt bug #343163

  16 Aug 2010; Samuli Suominen <ssuominen@gentoo.org> exaile-0.3.2.0.ebuild:
  Don't generate manpage to avoid sandbox issues with XDG directories wrt
  #332779.

*exaile-0.3.2.0 (14 Aug 2010)

  14 Aug 2010; Samuli Suominen <ssuominen@gentoo.org>
  +exaile-0.3.2.0.ebuild:
  Version bump.

  09 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  exaile-0.3.1.0.ebuild:
  x86 stable wrt bug #315599

  22 Apr 2010; Samuli Suominen <ssuominen@gentoo.org> exaile-0.3.1.0.ebuild:
  amd64 stable wrt #315599

  16 Apr 2010; Brent Baude <ranger@gentoo.org> exaile-0.3.1.0.ebuild:
  stable ppc, bug 315599

*exaile-0.3.1.1 (16 Apr 2010)

  16 Apr 2010; Samuli Suominen <ssuominen@gentoo.org>
  +exaile-0.3.1.1.ebuild:
  Version bump.

  16 Apr 2010; Samuli Suominen <ssuominen@gentoo.org> exaile-0.3.1.0.ebuild:
  Disable test suite because of missing python mox module wrt #315589.

*exaile-0.3.1.0 (06 Apr 2010)

  06 Apr 2010; Samuli Suominen <ssuominen@gentoo.org>
  exaile-0.3.0_alpha2.ebuild, exaile-0.3.1_beta.ebuild,
  +exaile-0.3.1.0.ebuild:
  Version bump and remove USE="hal" wrt #313397.

*exaile-0.3.1_beta (02 Mar 2010)

  02 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  +exaile-0.3.1_beta.ebuild, +files/exaile-0.3.1_beta-Makefile.patch:
  Version bump wrt #295542, thanks to Wicher Minnaard for reporting.
