@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/exaile
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/exaile/ChangeLog,v 1.76 2011/03/28 13:23:18 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/exaile/ChangeLog,v 1.77 2011/07/07 15:31:31 ssuominen Exp $
+
+  07 Jul 2011; Samuli Suominen <ssuominen@gentoo.org> exaile-0.3.2.0.ebuild,
+  exaile-0.3.2.1.ebuild:
+  Raise EAPI from 2 to 3 for python.eclass by Arfrever.
 
 *exaile-0.3.2.1 (28 Mar 2011)
 
